# tvdatafeed

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test.py
tests/: conftest.py  test_2fa.py  test_date_range_chunking.py  test_login_methods.py  test_security_info.py
tvDatafeed/: main.py
